New test cases TopCoder templates